added footer in dashboard

--- a/public/index.html
+++ b/public/index.html
@@ -440,6 +440,35 @@
         <canvas id="weeklyChart"></canvas>
       </div>
     </div>
+    <!-- SOFT FOOTER -->
+<div class="soft-footer">
+  <div class="soft-footer-inner">
+
+    <div class="footer-brand">
+      <i class="bi bi-heart-pulse"></i>
+      <span>MindBridge</span>
+    </div>
+
+    <p class="footer-message">
+      You don’t need to fix everything today.<br>
+      Just noticing how you feel is enough.
+    </p>
+
+    <div class="footer-reminders">
+      <span>🫶 Be kind to yourself</span>
+      <span>🌱 Progress over perfection</span>
+      <span>🧠 Awareness is strength</span>
+    </div>
+
+    <div class="footer-meta">
+      <span>Educational wellness project</span>
+      <span>•</span>
+      <span>Not medical advice</span>
+    </div>
+
+  </div>
+</div>
+
   </section>
 
   <!-- ================= SCREENING PAGE (placeholder) ================= -->
