update login and sign up ui

--- a/public/index.html
+++ b/public/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -220,6 +221,12 @@
   <section id="loginPage" class="container d-none auth-page d-flex align-items-center min-vh-100">
     <div class="row w-100 justify-content-center">
       <div class="col-lg-9 col-xl-8">
+        <!-- AUTH TOP BRAND BAR -->
+<div class="auth-logo-bar">
+  <i class="bi bi-heart-pulse"></i>
+  <span class="brand-text">MindBridge</span>
+</div>
+
         <div class="auth-shell">
 
           <!-- LEFT PANEL -->
@@ -282,6 +289,12 @@
   <section id="signupPage" class="container d-none auth-page d-flex align-items-center min-vh-100">
     <div class="row w-100 justify-content-center">
       <div class="col-lg-9 col-xl-8">
+        <!-- AUTH TOP BRAND BAR -->
+<div class="auth-logo-bar">
+  <i class="bi bi-heart-pulse"></i>
+  <span class="brand-text">MindBridge</span>
+</div>
+
         <div class="auth-shell">
 
           <!-- LEFT PANEL -->
