added pyschologist landing page

--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,137 @@
 
     </div>
   </nav>
+<!-- ================= PSYCHOLOGIST TRUST PAGE ================= -->
+<!-- ================= PSYCHOLOGIST TRUST PAGE ================= -->
+<section id="psychologistPage" class="home">
+
+  <div class="container">
+
+    <div class="home-hero">
+
+      <!-- LEFT -->
+      <div class="home-hero-left">
+
+        <span class="home-badge">Professional mental health support</span>
+
+        <h1 class="home-title">
+          Guided by a certified psychologist for your emotional wellbeing.
+        </h1>
+
+        <p class="home-sub">
+          MindBridge is designed to support students and young adults through
+          professional mental health guidance. Our platform promotes early
+          awareness, emotional resilience, and healthy coping strategies.
+        </p>
+
+        <p class="home-sub">
+          Developed under the guidance of a qualified psychologist from
+          Kasaragod, Kerala, MindBridge ensures a structured and reliable
+          approach to mental wellness.
+        </p>
+
+        <div class="home-cta">
+          <button class="btn btn-primary px-4" onclick="goToIntro()">
+            Explore MindBridge
+          </button>
+        </div>
+
+      </div>
+
+      <!-- RIGHT -->
+      <div class="home-hero-right">
+
+        <div class="psych-highlight">
+
+          <div class="psych-photo">
+            <i class="bi bi-person-heart"></i>
+          </div>
+
+          <h3>Dr. Varuni</h3>
+
+          <p class="text-muted">
+            Clinical Psychologist • Kasaragod, Kerala
+          </p>
+
+          <p>
+  Dr. Varuni specializes in student mental health, including academic stress,
+  exam anxiety, emotional burnout, and adjustment challenges. Her work focuses
+  on helping students build resilience, self-awareness, and healthy coping
+  strategies to manage academic and personal pressures.
+</p>
+<div class="mt-3">
+
+  <h6>Areas of Expertise</h6>
+
+  <ul class="small text-muted">
+    <li>Academic stress and exam anxiety</li>
+    <li>College adjustment and transition</li>
+    <li>Burnout and motivation challenges</li>
+    <li>Time management and emotional regulation</li>
+    <li>Confidence building and personal growth</li>
+  </ul>
+
+</div>
+<div class="mt-3">
+
+  <h6>Approach to Student Wellness</h6>
+
+  <p class="small text-muted">
+    Dr. Varuni believes that early emotional awareness can prevent serious
+    mental health challenges. MindBridge supports students through structured
+    daily reflection, screening, and self-monitoring to promote healthier
+    habits and emotional balance.
+  </p>
+
+</div>
+<p class="small text-muted">
+  MindBridge is designed specifically for students to support emotional
+  wellbeing during academic journeys and high-pressure environments.
+</p>
+
+
+          <p class="small text-muted">
+            Through MindBridge, users gain access to structured screening,
+            emotional tracking, and early guidance towards professional care.
+          </p>
+
+        </div>
+
+      </div>
+
+    </div>
+
+  </div>
+
+  <!-- SAME FOOTER -->
+  <div class="soft-footer">
+    <div class="soft-footer-inner">
+      <div class="footer-brand">
+        <i class="bi bi-heart-pulse"></i>
+        <span>MindBridge</span>
+      </div>
+
+      <p class="footer-message">
+        You don’t need to fix everything today.<br>
+        Just noticing how you feel is enough.
+      </p>
+
+      <div class="footer-reminders">
+        <span>🫶 Be kind to yourself</span>
+        <span>🌱 Progress over perfection</span>
+        <span>🧠 Awareness is strength</span>
+      </div>
+
+      <div class="footer-meta">
+        <span>Educational wellness project</span>
+        <span>•</span>
+        <span>Not medical advice</span>
+      </div>
+    </div>
+  </div>
+
+</section>
+
 
   <!-- ================= INTRO PAGE ================= -->
   <!-- ================= INTRO / HOME PAGE ================= -->
